modified test and sparse

--- a/src/gpu/matlab/sparse/CMakeLists.txt
+++ b/src/gpu/matlab/sparse/CMakeLists.txt
@@ -15,6 +15,7 @@ TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB
 SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
 CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_ADJ_SPARSE_NAME})
+CUDA_ADD_CUBLAS_TO_TARGET(${GRID_MEX_ADJ_SPARSE_NAME})
 
 if(WIN32)
 	CUDA_ADD_LIBRARY(${GRID_MEX_FORW_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_forw_gen} ${SPARSE_MEX_FILE_FORW})
@@ -26,6 +27,7 @@ TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLA
 SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
 CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_FORW_SPARSE_NAME})
+CUDA_ADD_CUBLAS_TO_TARGET(${GRID_MEX_FORW_SPARSE_NAME})
 
 if(WIN32)
   SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES
