--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,9 @@ SET(PATCH_OUTPUT_PATH ${PATCH_OUTPUT_DIR}/gridding3D.zip)
 FIND_PACKAGE(CUDA REQUIRED)
 
 #Searching MATLAB
-if(WIN32)
-	SET( MATLAB_ROOT_DIR "C:\\Program Files\\MATLAB\\R2011a" CACHE STRING "MATLAB Installation Directory")
-else()
-	SET (MATLAB_ROOT_DIR "/usr/local/MATLAB/R2010b")
-endif()
+# for Windows something like 
+#   SET(MATLAB_ROOT_DIR "C:\\Program Files\\MATLAB\\R2011a" CACHE STRING "MATLAB Installation Directory")
+   SET(MATLAB_ROOT_DIR "/usr/local/MATLAB/R2010b" CACHE STRING "MATLAB Installation Directory")
 
 SET( MATLAB_DIR = "${MATLAB_ROOT_DIR}")
 
