--- a/src/gpu/atomic/CMakeLists.txt
+++ b/src/gpu/atomic/CMakeLists.txt
@@ -2,9 +2,9 @@ MESSAGE("Atomic GPU Gridding Library")
 #add exe to build from gridding3D
 
 if(WIN32)
-	CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} atomic_gridding_gpu.cu ../../griddingFunctions.cpp ${GRIDDING_INCLUDE})
+    CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} atomic_gridding_gpu.cu ${GRIDDING_SOURCES} ${GRIDDING_INCLUDE})
 else(WIN32)
-	CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} atomic_gridding_gpu.cu ../../griddingFunctions.cpp ${GRIDDING_INCLUDE} SHARED) 
+    CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} atomic_gridding_gpu.cu ${GRIDDING_SOURCES} ${GRIDDING_INCLUDE} SHARED)
 endif(WIN32)
 
 CUDA_ADD_CUFFT_TO_TARGET(${GRID_LIB_ATM_NAME})
