worked on CMakeFiles, moved const init function

--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -1,3 +1,5 @@
+SET (GPU_GRIDDING_SOURCES  ${CMAKE_CURRENT_SOURCE_DIR}/gridding_gpu.cpp ${GRIDDING_SOURCES})
+
 ADD_SUBDIRECTORY(coarse)
 if(GEN_ATOMIC)
 	ADD_SUBDIRECTORY(atomic)
