--- a/src/gpu/coarse/CMakeLists.txt
+++ b/src/gpu/coarse/CMakeLists.txt
@@ -1,10 +1,14 @@
 MESSAGE("Coarse GPU Gridding Library")
 #add exe to build from gridding3D
 
+include_directories(${GRIDDING_INC_DIR})
+													
+cuda_include_directories(${GRIDDING_INC_DIR})
+
 if(WIN32)
-    CUDA_ADD_LIBRARY(${GRID_LIB_NAME} coarse.cu ../gridding_gpu.cpp ${GRIDDING_SOURCES} ${GRIDDING_INCLUDE} ${GRIDDING_INC_DIR}/cufft_config.hpp)
+    CUDA_ADD_LIBRARY(${GRID_LIB_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/coarse.cu ${GPU_GRIDDING_SOURCES} ${GRIDDING_INCLUDE} ${GRIDDING_INC_DIR}/cufft_config.hpp)
 else(WIN32)
-    CUDA_ADD_LIBRARY(${GRID_LIB_NAME} coarse.cu ../gridding_gpu.cpp ${GRIDDING_SOURCES} ${GRIDDING_INCLUDE} ${GRIDDING_INC_DIR}/cufft_config.hpp SHARED)
+    CUDA_ADD_LIBRARY(${GRID_LIB_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/coarse.cu ${GPU_GRIDDING_SOURCES} ${GRIDDING_INCLUDE} ${GRIDDING_INC_DIR}/cufft_config.hpp SHARED)
 endif(WIN32)
 
 CUDA_ADD_CUFFT_TO_TARGET(${GRID_LIB_NAME})
