--- a/src/gpu/coarse/CMakeLists.txt
+++ b/src/gpu/coarse/CMakeLists.txt
@@ -5,10 +5,13 @@ include_directories(${GRIDDING_INC_DIR})
 													
 cuda_include_directories(${GRIDDING_INC_DIR})
 
-set(GPU_CU_SOURCES	${CMAKE_CURRENT_SOURCE_DIR}/gridding_kernels.cu 
+set(GPU_CU_SOURCES	#${CMAKE_CURRENT_SOURCE_DIR}/coarse.cu 
+					${CMAKE_CURRENT_SOURCE_DIR}/gridding_kernels.cu
 					#${CMAKE_CURRENT_SOURCE_DIR}/../std_gridding_kernels.cu
 									 )
 
+SET(CUDA_NVCC_FLAGS "-arch;sm_11;--ptxas-options=-v")
+									 
 if(WIN32)
     CUDA_ADD_LIBRARY(${GRID_LIB_NAME} ${GPU_CU_SOURCES} ${GPU_GRIDDING_SOURCES} ${GRIDDING_INCLUDE} ${GRIDDING_INC_DIR}/cufft_config.hpp)
 else(WIN32)
