--- a/src/gpu/matlab/precomputation/CMakeLists.txt
+++ b/src/gpu/matlab/precomputation/CMakeLists.txt
@@ -1,6 +1,9 @@
 MESSAGE("Generate precomputation MEX file")
 
-set(PRECOMP_MEX_FILE griddingND_precomp.cpp ${MATLAB_HELPER_INCLUDE})
+set(PRECOMP_MEX_FILE griddingND_precomp.cpp
+                     gridding_operator_matlabfactory.hpp
+										 gridding_operator_matlabfactory.cpp
+                     ${MATLAB_HELPER_INCLUDE})
 
 CUDA_COMPILE(mex_griddingND_precomp_generated ${PRECOMP_MEX_FILE} SHARED)
 
