--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,31 @@
 *.lai
 *.la
 *.a
+
+# others
+common/
+lib/
+bin/
+/gridding3D/GPU_Regridding_3D/data/
+/gridding3D/GPU_Regridding_3D/functions/trash/
+/gridding3D/gridding3D/build/
+test_03/build/
+gridding3D/NUFFT_recon_demo_2D/kspaceRadial.mat
+gridding3D/gridding3D/bin
+*.asv
+*.zip
+gridding3D/daten/results/
+gridding3D/gridding3D/matlab/script.out.*
+*.mexa64
+*.mexw32
+*.mexw64
+*.m~
+gridding3D/bUTE/results/
+gridding3D/bUTE/data/
+gridding3D/3D_radial_bUTE_test/results/
+gridding3D/bUTE/script.out*
+gridding3D/daten/
+gridding3D/gridding3D/inc/*config.hpp
+build/
+*.out
+*.out.*
