Moved Forward operation into GO and removed unused gridding_gpu impl

--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET (GPU_GRIDDING_SOURCES  ${CMAKE_CURRENT_SOURCE_DIR}/gridding_gpu.cpp ${GRIDDING_SOURCES})
+SET (GPU_GRIDDING_SOURCES ${GRIDDING_SOURCES})
 
 ADD_SUBDIRECTORY(coarse)
 if(GEN_ATOMIC)
