Changed CMakeLists to build Tikred Code only if wanted

--- a/src/gpu/matlab/CMakeLists.txt
+++ b/src/gpu/matlab/CMakeLists.txt
@@ -139,5 +139,8 @@ if(GEN_ATOMIC)
   endif()
 endif()
 
-ADD_SUBDIRECTORY(sparse)
+if (GEN_TIKREG)
+	ADD_SUBDIRECTORY(sparse)
+endif()
+
 ADD_SUBDIRECTORY(precomputation)
