extracted precomputation util functions to make them available on host and device

--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -1,4 +1,6 @@
-SET (GPU_GRIDDING_SOURCES ${GRIDDING_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/precomp_kernels.cu)
+SET (GPU_GRIDDING_SOURCES ${GRIDDING_SOURCES} 
+     ${CMAKE_CURRENT_SOURCE_DIR}/precomp_utils.cu 
+		 ${CMAKE_CURRENT_SOURCE_DIR}/precomp_kernels.cu)
 
 ADD_SUBDIRECTORY(coarse)
 if(GEN_ATOMIC)
