--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ SET(GRIDDING_INCLUDE ${GRIDDING_INC_DIR}/cuda_utils.hpp
 										 ${GRIDDING_INC_DIR}/cuda_utils.cuh
 										 ${GRIDDING_INC_DIR}/config.hpp
 										 ${GRIDDING_INC_DIR}/griddingFunctions.hpp
+										 ${GRIDDING_INC_DIR}/gridding_types.hpp
 										 ${GRIDDING_INC_DIR}/gridding_kernels.hpp
 										 ${GRIDDING_INC_DIR}/precomp_kernels.hpp
 										 ${GRIDDING_INC_DIR}/precomp_utils.hpp
