--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ SET(GRIDDING_INCLUDE ${GRIDDING_INC_DIR}/cuda_utils.hpp
 										 ${GRIDDING_INC_DIR}/precomp_kernels.hpp
 										 ${GRIDDING_INC_DIR}/precomp_utils.hpp
                      ${GRIDDING_INC_DIR}/gridding_operator.hpp
+										 ${GRIDDING_INC_DIR}/texture_gridding_operator.hpp
                      ${GRIDDING_INC_DIR}/gridding_operator_factory.hpp)
 					 
 SET(MATLAB_HELPER_INCLUDE ${GRIDDING_INC_DIR}/matlab_helper.h)
