--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@ MESSAGE("------start creating libraries-------")
 SET(GRIDDING_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
 SET(GRIDDING_SOURCES ${GRIDDING_SRC_DIR}/gridding_utils.cpp
                      ${GRIDDING_SRC_DIR}/gridding_operator_factory.cpp
-                     ${GRIDDING_SRC_DIR}/gridding_operator.cpp)
+                     ${GRIDDING_SRC_DIR}/gridding_operator.cpp
+										 ${GRIDDING_SRC_DIR}/texture_gridding_operator.cpp)
 
 ADD_SUBDIRECTORY(gpu)
 
