--- a/test/cpu/CMakeLists.txt
+++ b/test/cpu/CMakeLists.txt
@@ -11,6 +11,6 @@ set(CPU_SOURCES gpuNUFFT_tests.cpp
 
 include_directories(${CUDA_INCLUDE_DIRS})
 #add source dir
-add_executable(runUnitTests ${CPU_SOURCES} ${GRIDDING_SOURCES} ../../inc/gpuNUFFT_cpu.hpp ../../inc/gpuNUFFT_utils.hpp ../../inc/gpuNUFFT_operator_factory.hpp ../../inc/gpuNUFFT_operator.hpp ../../inc/gpuNUFFT_kernels.hpp)
+add_executable(runUnitTests ${CPU_SOURCES} ${GPUNUFFT_SOURCES} ../../inc/gpuNUFFT_cpu.hpp ../../inc/gpuNUFFT_utils.hpp ../../inc/gpuNUFFT_operator_factory.hpp ../../inc/gpuNUFFT_operator.hpp ../../inc/gpuNUFFT_kernels.hpp)
 target_link_libraries(runUnitTests ${GRID_LIB_NAME} ${GTEST_LIB} ${GTESTMAIN_LIB})
 set_target_properties(runUnitTests PROPERTIES LINK_FLAGS -lpthread)
