--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 MESSAGE("------start creating libraries-------")
 
-SET(GRIDDING_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-SET(GRIDDING_SOURCES ${GRIDDING_SRC_DIR}/gpuNUFFT_utils.cpp
-                     ${GRIDDING_SRC_DIR}/gpuNUFFT_operator_factory.cpp
-                     ${GRIDDING_SRC_DIR}/gpuNUFFT_operator.cpp
-										 ${GRIDDING_SRC_DIR}/texture_gpuNUFFT_operator.cpp
-										 ${GRIDDING_SRC_DIR}/balanced_gpuNUFFT_operator.cpp)
+SET(GPUNUFFT_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
+SET(GPUNUFFT_SOURCES ${GPUNUFFT_SRC_DIR}/gpuNUFFT_utils.cpp
+                     ${GPUNUFFT_SRC_DIR}/gpuNUFFT_operator_factory.cpp
+                     ${GPUNUFFT_SRC_DIR}/gpuNUFFT_operator.cpp
+										 ${GPUNUFFT_SRC_DIR}/texture_gpuNUFFT_operator.cpp
+										 ${GPUNUFFT_SRC_DIR}/balanced_gpuNUFFT_operator.cpp)
 
 ADD_SUBDIRECTORY(gpu)
 
