--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET (GPU_GRIDDING_SOURCES ${GRIDDING_SOURCES} 
+SET (GPU_GPUNUFFT_SOURCES ${GPUNUFFT_SOURCES} 
 		 ${CMAKE_CURRENT_SOURCE_DIR}/precomp_kernels.cu)
 
 ADD_SUBDIRECTORY(coarse)
