--- a/src/gpu/atomic/CMakeLists.txt
+++ b/src/gpu/atomic/CMakeLists.txt
@@ -1,9 +1,9 @@
 MESSAGE("Atomic GPU GpuNUFFT Library")
 #add exe to build from gpuNUFFT
 
-include_directories(${GRIDDING_INC_DIR})
+include_directories(${GPUNUFFT_INC_DIR})
 													
-cuda_include_directories(${GRIDDING_INC_DIR})
+cuda_include_directories(${GPUNUFFT_INC_DIR})
 
 set(GPU_CU_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/atomic_gpuNUFFT.cu 	
 					#${CMAKE_CURRENT_SOURCE_DIR}/atomic_gpuNUFFT_kernels.cu 
@@ -13,9 +13,9 @@ set(GPU_CU_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/atomic_gpuNUFFT.cu
 SET(CUDA_NVCC_FLAGS "-arch;sm_20;--ptxas-options=-v")
 									 
 if(WIN32)
-    CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} ${GPU_CU_SOURCES}  ${GPU_GRIDDING_SOURCES} ${GRIDDING_SOURCES} ${GRIDDING_INCLUDE})
+    CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} ${GPU_CU_SOURCES}  ${GPU_GPUNUFFT_SOURCES} ${GPUNUFFT_SOURCES} ${GPUNUFFT_INCLUDE})
 else(WIN32)
-    CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} ${GPU_CU_SOURCES}  ${GPU_GRIDDING_SOURCES} ${GRIDDING_SOURCES} ${GRIDDING_INCLUDE} SHARED)
+    CUDA_ADD_LIBRARY(${GRID_LIB_ATM_NAME} ${GPU_CU_SOURCES}  ${GPU_GPUNUFFT_SOURCES} ${GPUNUFFT_SOURCES} ${GPUNUFFT_INCLUDE} SHARED)
 endif(WIN32)
 
 CUDA_ADD_CUFFT_TO_TARGET(${GRID_LIB_ATM_NAME})
