--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -19,6 +19,9 @@ SET(ARCHIVE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(PATCH_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/deploy)
 SET(PATCH_OUTPUT_PATH ${PATCH_OUTPUT_DIR}/gpuNUFFT.zip)
 
+#mex file export dir
+SET(MEX_EXPORT_DIR ${PROJECT_SOURCE_DIR}/../gpuNUFFT/@gpuNUFFT/private CACHE STRING "Folder in which mex files are exported to.")
+
 #Searching CUDA
 FIND_PACKAGE(CUDA REQUIRED)
 
