--- a/CUDA/src/gpu/matlab/CMakeLists.txt
+++ b/CUDA/src/gpu/matlab/CMakeLists.txt
@@ -117,6 +117,16 @@ else(UNIX)
   SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})  
 endif()
 
+macro(exportMex mexName)
+ADD_CUSTOM_COMMAND(TARGET ${mexName}
+          POST_BUILD
+          COMMAND ${CMAKE_COMMAND} -E copy "${LIBRARY_OUTPUT_PATH}/${mexName}${MEX_SUFFIX}" ${MEX_EXPORT_DIR}
+)
+endmacro()
+
+exportMex(${GRID_MEX_ADJ_NAME})
+exportMex(${GRID_MEX_FORW_NAME})
+
 if(GEN_ATOMIC)
   CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_ATM_NAME} SHARED ${mex_gpuNUFFT_adj_generated} ${MEX_FILE})
   TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_ATM_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME})
@@ -137,6 +147,8 @@ if(GEN_ATOMIC)
 	SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
 	SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
   endif()
+	exportMex(${GRID_MEX_ADJ_ATM_NAME})
+	exportMex(${GRID_MEX_ADJ_ATM_NAME})
 endif()
 
 ADD_SUBDIRECTORY(precomputation)
