--- a/CUDA/src/gpu/matlab/precomputation/CMakeLists.txt
+++ b/CUDA/src/gpu/matlab/precomputation/CMakeLists.txt
@@ -16,3 +16,4 @@ else(UNIX)
   SET_TARGET_PROPERTIES(${GRID_MEX_PRECOMP_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
 endif()
 
+exportMex(${GRID_MEX_PRECOMP_NAME})
