Fix bug in export of mex files.

--- a/CUDA/src/gpu/matlab/CMakeLists.txt
+++ b/CUDA/src/gpu/matlab/CMakeLists.txt
@@ -148,7 +148,7 @@ if(GEN_ATOMIC)
 	SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
   endif()
 	exportMex(${GRID_MEX_ADJ_ATM_NAME})
-	exportMex(${GRID_MEX_ADJ_ATM_NAME})
+	exportMex(${GRID_MEX_FORW_ATM_NAME})
 endif()
 
 ADD_SUBDIRECTORY(precomputation)
