Add generation warning to config files.

--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -92,7 +92,7 @@ SET(GRID_MEX_ADJ_ATM_NAME "mex_gpuNUFFT_adj_atomic${PREC_SUFFIX}")
 SET(GRID_MEX_PRECOMP_NAME "mex_gpuNUFFT_precomp${PREC_SUFFIX}")
 
 MESSAGE(STATUS "creating lib with name: ${GRID_LIB_NAME}")
-
+SET(WARNING "/* WARNING: Automatically generated file. Please do not modify this file. */")
 CONFIGURE_FILE( ${CMAKE_SOURCE_DIR}/inc/config.hpp.cmake ${CMAKE_SOURCE_DIR}/inc/config.hpp)
 CONFIGURE_FILE( ${CMAKE_SOURCE_DIR}/inc/cufft_config.hpp.cmake ${CMAKE_SOURCE_DIR}/inc/cufft_config.hpp)
 
