Add flag to show all warnings.

--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -78,6 +78,9 @@ endif(GPU_DOUBLE_PREC)
 
 MESSAGE(STATUS "setting NVCC FLAGS to: ${CUDA_NVCC_FLAGS}")
 
+# TODO build type dependent
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g")
+
 #LIB and MEX-file names
 SET(GRID_LIB_NAME "gpuNUFFT${PREC_SUFFIX}")
 SET(GRID_LIB_ATM_NAME "gpuNUFFT_ATM${PREC_SUFFIX}")
