Do not show build warnings in default configuration.

--- a/CUDA/src/gpu/coarse/CMakeLists.txt
+++ b/CUDA/src/gpu/coarse/CMakeLists.txt
@@ -10,13 +10,13 @@ set(GPU_CU_SOURCES	${CMAKE_CURRENT_SOURCE_DIR}/coarse_gpuNUFFT.cu
 					#${CMAKE_CURRENT_SOURCE_DIR}/../std_gpuNUFFT_kernels.cu
 									 )
 
-if(GPU_DOUBLE_PREC)
-  SET(CUDA_NVCC_FLAGS "-arch;sm_20;--ptxas-options=-v")
-else(GPU_DOUBLE_PREC)
-  if (NOT GEN_ATOMIC)
+if (NOT GEN_ATOMIC)
+  if(CMAKE_BUILD_TYPE MATCHES Debug)
     SET(CUDA_NVCC_FLAGS "-arch;sm_11;--ptxas-options=-v")
-  endif(NOT GEN_ATOMIC)
-endif(GPU_DOUBLE_PREC)
+  else(CMAKE_BUILD_TYPE)
+    SET(CUDA_NVCC_FLAGS "-arch;sm_11;")
+  endif()
+endif(NOT GEN_ATOMIC)
 
 if(WIN32)
     CUDA_ADD_LIBRARY(${GRID_LIB_NAME} ${GPU_CU_SOURCES} ${GPU_GPUNUFFT_SOURCES} ${GPUNUFFT_INCLUDE} ${GPUNUFFT_INC_DIR}/cufft_config.hpp)
